--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
  <section id="profile-about" class="flex-container">
         <div class="profile-image">
-        <img src="C:\Users\nahat\OneDrive\Desktop\my-portfolio\pictures\myphoto.jpg" alt="Divyanshi Jain" width="200">
+        <img src="myphoto.jpg" alt="Divyanshi Jain" width="200">
     </div>
     <div class="profile-text">
         <h3>Divyanshi Jain</h3>
