img display update

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             <div class="card">
                 <div class="card-content">
                     <span class="card-title">Hakerrank</span>
-                    <p><img src="C:\Users\nahat\OneDrive\Desktop\my-portfolio\pictures\haker1.png" alt="Divyanshi Jain" width="200">
-		<p><img src="C:\Users\nahat\OneDrive\Desktop\my-portfolio\pictures\haker2.png" alt="Divyanshi Jain" width="200">
+                    <p><img src="haker1.png" alt="Divyanshi Jain" width="200">
+		<p><img src="haker2.png" alt="Divyanshi Jain" width="200">
 </p>
 </p>
                 </div>
@@ -135,7 +135,7 @@
             <div class="card">
                 <div class="card-content">
                     <span class="card-title">Elab</span>
-                    <p><img src="C:\Users\nahat\OneDrive\Desktop\my-portfolio\pictures\elab.png" alt="Divyanshi Jain" width="200">
+                    <p><img src="elab.png" alt="Divyanshi Jain" width="200">
 </p>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                 <div class="card-content">
                     <span class="card-title">DSA in C test</span>
                     <p>Issued by: Code Chef</p>
-                    <p><img src="C:\Users\nahat\OneDrive\Desktop\my-portfolio\pictures\codechef.png" alt="Divyanshi Jain" width="200">
+                    <p><img src="codechef.png" alt="Divyanshi Jain" width="200">
 </p>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                 <div class="card-content">
                     <span class="card-title">C programming</span>
                     <p>Issued by: Udemy</p>
-                    <p><img src="C:\Users\nahat\OneDrive\Desktop\my-portfolio\pictures\c course certificate.jpg" alt="Divyanshi Jain" width="200">
+                    <p><img src="c course certificate.jpg" alt="Divyanshi Jain" width="200">
 </p>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                 <div class="card-content">
                     <span class="card-title">C++ Programming </span>
                     <p>Issued by: Saylor academy</p>
-                    <p><img src="C:\Users\nahat\OneDrive\Desktop\my-portfolio\pictures\Screenshot 2024-04-17 224001.png" alt="Divyanshi Jain" width="200">
+                    <p><img src="Screenshot 2024-04-17 224001.png" alt="Divyanshi Jain" width="200">
 </p>
                 </div>
             </div>
@@ -183,7 +183,7 @@
                 <div class="card-content">
                     <span class="card-title">Divide and conquer, sorting and searching, ramdomized algorithms </span>
                     <p>Issued by: Stanford university</p>
-                    <p><img src="C:\Users\nahat\OneDrive\Desktop\my-portfolio\pictures\stanford dsa.png" alt="Divyanshi Jain" width="200">
+                    <p><img src="stanford dsa.png" alt="Divyanshi Jain" width="200">
 </p>
                 </div>
             </div>
